# sparkey-reflect

./: .gitignore  LICENSE  PLUGIN_PAGE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
plugins/sparkey/.claude-plugin/: plugin.json
plugins/sparkey/commands/: reflect.md
sparkey_reflect/: __init__.py  __main__.py  cli.py
sparkey_reflect/analyzers/: base_analyzer.py  completion_patterns.py  context_management.py  conversation_flow.py  outcome_tracker.py  prompt_quality.py  registry.py  rule_file.py  session_patterns.py  tool_usage.py
sparkey_reflect/config/: defaults.py  schema.py
sparkey_reflect/core/: engine.py  models.py  scoring.py  storage.py
sparkey_reflect/insights/: conversation_extractor.py  generator.py  learning_paths.py  llm_generator.py  templates.py
sparkey_reflect/insights/prompts/: reflect_system_prompt.md
sparkey_reflect/readers/: base_reader.py  claude_code_reader.py  copilot_reader.py  cursor_reader.py
tests/: conftest.py  test_cli.py  test_config.py  test_conversation_extractor.py  test_conversation_flow.py  test_generator.py  test_learning_paths.py  test_models.py  test_prompt_quality.py  test_registry.py  test_scoring.py  test_storage.py  test_templates.py
