[project]
name = "sparkey-reflect"
version = "0.1.0"
description = "AI coding advisor — analyzes your AI coding sessions and generates coaching insights"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Sparkey AI", email = "admin@sparkey.ai" },
]
keywords = [
    "ai", "coding", "advisor", "claude", "copilot", "cursor", "developer-tools",
    "productivity", "efficiency", "rule-files", "skills", "system-prompt", "learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://sparkey.ai"
Repository = "https://github.com/sparkey-ai/sparkey-reflect"
Issues = "https://github.com/sparkey-ai/sparkey-reflect/issues"

[project.scripts]
sparkey-reflect = "sparkey_reflect.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sparkey_reflect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
